--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,6 +20,7 @@
 	.logo {
 		width: 45px;
 		height: 45px;
+		z-index: 999;
 	}
 
 	.background {
@@ -28,5 +29,6 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
+		pointer-events: none;
 	}
 }
