--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,6 +15,7 @@
 		align-items: center;
 		height: 100%;
 		margin: 0 auto;
+		justify-content: space-between;
 	}
 
 	.logo {
@@ -30,5 +31,19 @@
 		width: 100%;
 		height: 100%;
 		pointer-events: none;
+		z-index: 2;
+	}
+
+	.title {
+		//position: absolute;
+		//top: 50%;
+		//transform: translateX(-0%)translateY(-50%);
+		//right: 0%;
+		font-size: 1rem;
+		line-height: 1;
+		margin: 0;
+		span {
+			color: transparent;
+		}
 	}
 }
