fix few momets on pagination

--- a/src/components/CharacterCard/CharacterCard.module.scss
+++ b/src/components/CharacterCard/CharacterCard.module.scss
@@ -1,42 +1,40 @@
 .card {
-  display: flex;
-  flex-direction: column;
-  border-radius: 0.5rem;
-  overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	border-radius: 0.5rem;
+	overflow: hidden;
 }
 .characterCard {
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
+	display: flex;
+	align-items: baseline;
+	justify-content: center;
 
-
-  h3 {
-    margin: 0;
-  }
-
+	h3 {
+		margin: 0;
+	}
 }
 .details {
-  background: #9ecfcd;
-  display: flex;
-  flex-direction: column;
-  padding:10px ;
-  flex-grow: 1;
+	background: #9ecfcd;
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+	flex-grow: 1;
 
-  .characterCard {
-    margin-bottom: auto;
-  }
+	.characterCard {
+		margin-bottom: auto;
+	}
 
-  .param {
-    text-decoration: underline;
-    cursor: pointer;
-  }
+	.param {
+		text-decoration: underline;
+		cursor: pointer;
+	}
 }
-.characterCard ,.details .param {
-  color: #fff;
+.characterCard,
+.details .param {
+	color: #fff;
 
-  &:hover {
-    color: #e85355;
-    text-decoration: none;
-  }
+	&:hover {
+		color: #e85355;
+		text-decoration: none;
+	}
 }
-
